# archiMeades

./: .firebaserc  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  CELERY.md
backend/alembic/: env.py
backend/app/: __init__.py  api_v1_app.py  celery_app.py  main.py
backend/tests/: conftest.py  test_accuracy_wo55.py  test_bao.py  test_datasets.py  test_field_solvers.py  test_getdist_export.py  test_grid.py  test_health.py  test_likelihood.py  test_mcmc.py  test_migrations.py  test_nbody.py  test_observables.py  (+8 more)
dgx_orchestrator/: README.md  docker-compose.yml  install-systemd.sh  main.py  run-now.sh
docs/: API_INTEGRATION.md  AUTH.md  CHANGELOG.md  DEPLOYMENT.md  DGX-SETUP.md  INFINIBAND_SPECS.md  MIGRATIONS.md  MONITORING.md  PAPER_PROSE.md  PLATFORM_DESCRIPTION.md  REPOSITORY.md  SECURITY.md  WO-51-COORDINATION.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: DATA_DOWNLOAD_AND_STORAGE.md  archimedes-daemon.sh  benchmark_cobaya.md  celery-worker.sh  check-startup.py  check_numpyro.py  data-sources-catalog.md  deploy-dgx-heartbeat.sh  docker-cleanup.sh  download_galaxy_samples.py  fetch-pantheon-data.py  fix-neo4j-ports.sh  fix-neo4j.sh  install-dgx-heartbeat-systemd.sh  migrate-db.sh  pytest_wo32_result.txt  pytest_wo33_result.txt  requeue-stuck-jobs.py  restart-app.sh  run-dgx-heartbeat-standalone.py  run_tests.py  seed-api-theory.py  seed-simulation.py  set-dgx-at-capacity.sh  setup-localstack-s3.sh  start-app.sh  start-dev.sh  start-dgx-orchestrator.sh  start-neo4j-with-7687.sh  test-api-v1.sh  test-celery-simulation.py  test-celery-task.py  test-dgx-connection.sh  test-job-api-wo38.sh  test-jobs-api.sh  test-mcmc-job-e2e.sh  test-provenance-ui.sh  test-provenance.sh  test_mcmc_api.py  verify-explore-flow.py
(+194 files in other folders)
