[project]
name = "gravitational-platform"
version = "0.1.0"
description = "Research platform for gravitational physics simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "aiosqlite>=0.20.0",
    "celery[redis]>=5.4.0",
    "psycopg2-binary>=2.9.0",  # sync Postgres for Celery workers (simulation, MCMC tasks)
    "boto3>=1.35.0",
    "neo4j>=5.25.0",
    "numpy>=1.26.0",
    "astropy>=6.0.0",
    "scipy>=1.11.0",
    "h5py>=3.10.0",
    "numpyro>=0.15.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "arviz>=0.18.0",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.20.0"]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0"]
numpyro = ["numpyro>=0.15.0", "jax>=0.4.0", "jaxlib>=0.4.0", "arviz>=0.18.0"]
emcee = ["emcee>=3.1.0"]
perturbations = ["camb>=1.6.0"]
bao = ["classy>=3.0.0"]
observables = ["astropy>=6.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
